# faridaily_django

./: .gitignore  Makefile  README.md  docker-compose.production.yml  docker-compose.yml  dump.rdb  entrypoint.sh  env-template  package-lock.json  pyproject.toml  pytest.ini  run_dev.sh
.github/workflows/: main.yml
backend/: Dockerfile  celerybeat-schedule.db
backend/api/: api.py  models.py  tasks.py  utils.py
backend/api/controllers/: auth.py  drafts.py  telegram.py  tg_session.py
backend/api/migrations/: 0001_initial.py  0002_draftdb_drafthistory.py  0003_telegramtemplatedb.py  0004_telegramtemplatedb_title_and_more.py  0005_messagedb_is_deleted.py  0006_draftdb_media_url.py  0007_alter_draftdb_media_url.py
backend/api/schemas/: drafts.py  messages.py  telegram.py
backend/api/telegram/: bot.py  html_parser.py  utils.py
backend/backend/: celery_app.py  settings.py  urls.py
backend/logs/: django.log.2025-02-16  django.log.2025-02-20  django.log.2025-02-22  django.log.2025-02-24  django.log.2025-02-26  django.log.2025-02-27  django.log.2025-03-01  django.log.2025-03-02  django.log.2025-03-06
backend/tests/: conftest.py  test_draft.py  test_telegram.py  test_user.py
backend/users/: schemas.py
backend/users/migrations/: 0001_initial.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  interface.ts  main.tsx
frontend/src/Components/Buttons/: FileSaveButton.tsx  FloatButton.tsx  LogoutButton.tsx
frontend/src/Components/Charts/: BarChart.tsx  Chart.tsx
nginx/: Dockerfile  nginx.conf
(+20 files in other folders)
